# esp_watering

./: .gitignore  CMakeLists.txt  readme.md
front/: index.html  scripts.js
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  my_rest.c
